// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryRenderer returns general error component for network failure 1`] = `
<GeneralError
  errorMessage="No internet connection, please check your internet settings or try it later."
/>
`;

exports[`QueryRenderer returns general error for other errors 1`] = `
<GeneralError
  errorMessage="custom message"
/>
`;

exports[`QueryRenderer returns loader if no props and no errors 1`] = `<FullPageLoading />`;
